--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,10 +19,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/wisecow:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/wisecow:latest
+      - name: Build Docker Image
+  run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/wisecow:latest .
+
 
       - name: Deploy to Kubernetes
         run: |
